Feat: finish testing and start documenting
